--- a/product.css
+++ b/product.css
@@ -18,3 +18,54 @@
     font-size: 15px;
     font-weight: 600;
 }
+.price{
+    background-color: yellow;
+    color: black;
+    border-radius: 10px;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    font-size: 30px;
+    font-weight: 700;
+}
+.education{
+    border: 1px solid lightgrey;
+    outline: none;
+    border-radius: 3px;
+    padding: 8px;
+    width: 100%;
+}
+.category-name{
+    color: black;
+    font-weight: 500;
+}
+.file{
+    border-radius: 4px;
+    border: 1px solid lightgray;
+    padding: 10px;
+    width: 100%;
+}
+.select{
+ border: 1px solid lightgray; 
+ outline: none;
+width: 100%;
+padding: 8px;
+border-radius: 5px;
+font-weight: 500;
+}
+.btn-primary{
+    background-color: rgb(0, 108, 196);
+    padding: 10px;
+    width: 100%;
+    margin-top: 5%;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+}
+.btn-primary:hover{
+    opacity: 0.7;
+}
+hr{
+    color: lightgray;
+}
